# KSPBuildTools

./: .gitignore  CHANGELOG.md  Directory.Build.props  Directory.Build.props.default  KSPBuildTools.csproj  KSPBuildTools.sln  KSPCommon.props  KSPCommon.targets  LICENSE  LICENSE.md  README.md  build-assetbundle.sh  justfile  update-version.sh
.github/workflow-templates/: build-msbuild.yml  build.properties.json  build.yml
.github/workflows/: build.yml  ckan.yml  create-release.yml  install-dependencies.yml  internal-ci.yml  internal-test-assetbundle.yml  internal-test-plugin-legacy.yml  internal-test-plugin-nuget.yml  internal-test-plugin.yml  nuget.yml  publish-to-spacedock.yml  test-plugin-legacy.yml  test-plugin.yml  test.yml  update-version.yml  validate.yml
Editor/: AssetBundleBuilder.cs
docs/: .readthedocs.yaml  conf.py  index.md  index.rst  migration.md  pyproject.toml  requirements.in  requirements.txt  scripts.md
docs/actions/: assemble-release.md  build-assetbundles.md  compile.md  get-release-info.md  index.md  install-dependencies.md  publish-to-spacedock.md  setup-ckan.md  update-version.md
docs/msbuild/: configuration.md  dependencies.md  generating-version-files.md  getting-started.md  index.md  ksp-install.md  properties.md
docs/workflows/: build.md  create-release.md  index.md  publish-to-spacedock.md  validate.md
include/: Log.cs
include/unity/: Log.cs
tests/plugin-mod-legacy/: .gitignore  PluginModLegacy.sln  plugin-mod-legacy.csproj
tests/plugin-mod-nuget/: plugin-mod-nuget.csproj  plugin-mod.csproj  pluginModNuget.cs
(+26 files in other folders)
